editing in sign up pages

--- a/signup.html
+++ b/signup.html
@@ -12,10 +12,10 @@
   <form class="login-form">
    <img class="imgLogo" src="./background.png" height="50px" width="70px">
   <p> Name</p>
-   <input type="text" placeholder="lam@gmail.com">
+   <input type="text" placeholder="lam">
    <p> Age
    </p>
-   <input type="number" placeholder="**********">
+   <input type="number" placeholder="20">
    <p> Email</p>
    <input type="email" placeholder="lam@gmail.com">
    <p> password
