--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@
 <body class="bg-light">
 
   <!-- ✅ Navbar -->
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark px-3">
+  <nav class="navbar navbar-expand-lg navbar-light bg-light px-3">
     <div class="container-fluid">
       <a class="navbar-brand d-flex align-items-center" href="#">
         <img src="./logo.jpg" alt="Logo" width="60" height="50" class="me-2 rounded" />
@@ -34,7 +34,7 @@
       </button>
 
       <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
-        <ul class="navbar-nav mb-2 mb-lg-0">
+        <ul class="navbar-nav mb-2 mb-lg-0 ">
           <li class="nav-item"><a class="nav-link" href="./home.html">Home</a></li>
           <li class="nav-item"><a class="nav-link" href="./about.html">About</a></li>
           <li class="nav-item"><a class="nav-link" href="./contact.html">Contact Us</a></li>
