--- a/contact.html
+++ b/contact.html
@@ -167,22 +167,37 @@
 <body>
 
   <header>
-    <nav class="nav">
-      <div class="img1">
-        <img src="./logo.jpg" alt="Lam Logo" height="60px" width="70px">
+    <!-- ✅ Navbar -->
+  <nav class="navbar navbar-expand-lg navbar-light bg-light px-3">
+    <div class="container-fluid">
+      <a class="navbar-brand d-flex align-items-center" href="#">
+        <img src="./logo.jpg" alt="Logo" width="60" height="50" class="me-2 rounded" />
+        Lam
+      </a>
+      <button
+        class="navbar-toggler"
+        type="button"
+        data-bs-toggle="collapse"
+        data-bs-target="#navbarNav"
+        aria-controls="navbarNav"
+        aria-expanded="false"
+        aria-label="Toggle navigation"
+      >
+        <span class="navbar-toggler-icon"></span>
+      </button>
+
+      <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
+        <ul class="navbar-nav mb-2 mb-lg-0 ">
+          <li class="nav-item"><a class="nav-link" href="./home.html">Home</a></li>
+          <li class="nav-item"><a class="nav-link" href="./about.html">About</a></li>
+          <li class="nav-item"><a class="nav-link" href="./contact.html">Contact Us</a></li>
+          <li class="nav-item"><a class="nav-link" href="./services.html">Services</a></li>
+        </ul>
       </div>
 
-      <ul class="itemlists">
-        <li><a href="./home.html">Home</a></li>
-        <li><a href="./about.html">About</a></li>
-        <li><a href="./contact.html">Contact Us</a></li>
-        <li><a href="./services.html">Services</a></li>
-      </ul>
-
-      <div class="button">
-        <button><a href="login.html">Login</a></button>
-      </div>
-    </nav>
+      <a href="login.html" class="btn btn-outline-light ms-lg-3 mt-2 mt-lg-0">Login</a>
+    </div>
+  </nav>
   </header>
 
   <main class="contact-page-main">
