--- a/about.html
+++ b/about.html
@@ -10,44 +10,31 @@
     href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
     rel="stylesheet"
   />
-  <link rel="stylesheet" href="./style.css" />
 </head>
 <body class="bg-light">
 
-  
-   <!-- ✅ Navbar -->
-  <nav class="navbar navbar-expand-lg navbar-light bg-light px-3">
-    <div class="container-fluid">
-      <a class="navbar-brand d-flex align-items-center" href="#">
-        <img src="./logo.jpg" alt="Logo" width="60" height="50" class="me-2 rounded" />
-        Lam
-      </a>
-      <button
-        class="navbar-toggler"
-        type="button"
-        data-bs-toggle="collapse"
-        data-bs-target="#navbarNav"
-        aria-controls="navbarNav"
-        aria-expanded="false"
-        aria-label="Toggle navigation"
-      >
-        <span class="navbar-toggler-icon"></span>
-      </button>
+  <header>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light px-3">
+        <a class="navbar-brand" href="#">
+            <img src="./logo.jpg" alt="Logo" height="30" width="40" class="rounded">
+        </a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
+            <ul class="navbar-nav  mb-2 mb-lg-0 ">
+                <li class="nav-item"><a class="nav-link" href="#">Home</a></li>
+                <li class="nav-item"><a class="nav-link" href="./about.html">About</a></li>
+                <li class="nav-item"><a class="nav-link" href="./contact.html">Contact Us</a></li>
+                <li class="nav-item"><a class="nav-link" href="./services.html">Services</a></li>
+            </ul>
+            <a href="login.html" class="btn btn-dark">Login</a>
+        </div>
+    </nav>
+</header>
 
-      <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
-        <ul class="navbar-nav mb-2 mb-lg-0 ">
-          <li class="nav-item"><a class="nav-link" href="./home.html">Home</a></li>
-          <li class="nav-item"><a class="nav-link" href="./about.html">About</a></li>
-          <li class="nav-item"><a class="nav-link" href="./contact.html">Contact Us</a></li>
-          <li class="nav-item"><a class="nav-link" href="./services.html">Services</a></li>
-        </ul>
-      </div>
 
-      <a href="login.html" class="btn btn-outline-light ms-lg-3 mt-2 mt-lg-0">Login</a>
-    </div>
-  </nav>
-
-  <!-- ✅ Main Content -->
   <main class="container my-5">
     <section class="row align-items-center mb-5">
       <div class="col-lg-6">
