--- a/contact.html
+++ b/contact.html
@@ -4,8 +4,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Lam - Contact Us</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
-
+   
   <style>
     /* تنسيق عام */
     body {
@@ -167,38 +168,25 @@
 <body>
 
   <header>
-    <!-- ✅ Navbar -->
-  <nav class="navbar navbar-expand-lg navbar-light bg-light px-3">
-    <div class="container-fluid">
-      <a class="navbar-brand d-flex align-items-center" href="#">
-        <img src="./logo.jpg" alt="Logo" width="60" height="50" class="me-2 rounded" />
-        Lam
-      </a>
-      <button
-        class="navbar-toggler"
-        type="button"
-        data-bs-toggle="collapse"
-        data-bs-target="#navbarNav"
-        aria-controls="navbarNav"
-        aria-expanded="false"
-        aria-label="Toggle navigation"
-      >
-        <span class="navbar-toggler-icon"></span>
-      </button>
-
-      <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
-        <ul class="navbar-nav mb-2 mb-lg-0 ">
-          <li class="nav-item"><a class="nav-link" href="./home.html">Home</a></li>
-          <li class="nav-item"><a class="nav-link" href="./about.html">About</a></li>
-          <li class="nav-item"><a class="nav-link" href="./contact.html">Contact Us</a></li>
-          <li class="nav-item"><a class="nav-link" href="./services.html">Services</a></li>
-        </ul>
-      </div>
-
-      <a href="login.html" class="btn btn-outline-light ms-lg-3 mt-2 mt-lg-0">Login</a>
-    </div>
-  </nav>
-  </header>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light px-3">
+        <a class="navbar-brand" href="#">
+            <img src="./logo.jpg" alt="Logo" height="30" width="40" class="rounded">
+        </a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
+            <ul class="navbar-nav  mb-2 mb-lg-0 ">
+                <li class="nav-item"><a class="nav-link" href="#">Home</a></li>
+                <li class="nav-item"><a class="nav-link" href="./about.html">About</a></li>
+                <li class="nav-item"><a class="nav-link" href="./contact.html">Contact Us</a></li>
+                <li class="nav-item"><a class="nav-link" href="./services.html">Services</a></li>
+            </ul>
+            <a href="login.html" class="btn btn-dark">Login</a>
+        </div>
+    </nav>
+</header>
 
   <main class="contact-page-main">
     <section class="contact-hero">
@@ -257,6 +245,6 @@
 
     </section>
   </main>
-
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
