--- a/services.html
+++ b/services.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Lam - Services</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
 
   <style>
@@ -237,22 +238,26 @@
 </head>
 
 <body>
-  <header>
-    <nav class="nav">
-      <div class="img1">
-        <img src="./logo.jpg" alt="Lam Logo" height="60px" width="70px">
-      </div>
-      <ul class="itemlists">
-        <li><a href="./home.html">Home</a></li>
-        <li><a href="./about.html">About</a></li>
-        <li><a href="./contact.html">Contact Us</a></li>
-        <li><a href="./services.html">Services</a></li>
-      </ul>
-      <div class="button">
-        <button><a href="login.html">Login</a></button>
-      </div>
+<header>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light px-3">
+        <a class="navbar-brand" href="#">
+            <img src="./logo.jpg" alt="Logo" height="30" width="40" class="rounded">
+        </a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
+            <ul class="navbar-nav  mb-2 mb-lg-0 ">
+                <li class="nav-item"><a class="nav-link" href="#">Home</a></li>
+                <li class="nav-item"><a class="nav-link" href="./about.html">About</a></li>
+                <li class="nav-item"><a class="nav-link" href="./contact.html">Contact Us</a></li>
+                <li class="nav-item"><a class="nav-link" href="./services.html">Services</a></li>
+            </ul>
+            <a href="login.html" class="btn btn-dark">Login</a>
+        </div>
     </nav>
-  </header>
+</header>
 
   <main class="services-page-main">
     <section class="services-hero">
@@ -323,3 +328,6 @@
         </div>
       </div>
     </section>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"></script>
+</body>
+</html>
