--- a/login.html
+++ b/login.html
@@ -1,28 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Lam - Login</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="style.css">
 </head>
-<body>
-     <P class="head"> Login To Focus Flow </P>
-<div class="continer">
-  <form class="login-form">
-   <img class="imgLogo" src="./background.png" height="50px" width="70px">
-   <p> Email</p>
-   <input type="email" placeholder="lam@gmail.com">
-   <p> password
-   </p>
-   <input type="password" placeholder="**********">
-   <div class="button">
-    <br>
- <button><a href="home.html">Login</a></button>
-   </div>
-     <p class="note">Don't have an account? <a href="./signup.html">Sign up</a></p>
-  </form> 
-  </div> 
-  
+<body class="d-flex align-items-center justify-content-center min-vh-100 bg-light">
+
+  <div class="container" style="max-width: 400px;">
+    <div class="card shadow-sm p-4">
+      <div class="text-center mb-4">
+        <img src="./background.png" alt="Logo" height="70">
+        <h3 class="mt-3">Login To Focus Flow</h3>
+      </div>
+
+      <form>
+        <div class="mb-3">
+          <label for="email" class="form-label">Email</label>
+          <input type="email" id="email" class="form-control" placeholder="lam@gmail.com">
+        </div>
+
+        <div class="mb-3">
+          <label for="password" class="form-label">Password</label>
+          <input type="password" id="password" class="form-control" placeholder="**********">
+        </div>
+
+        <a href="home.html" class="btn btn-dark w-100">Login</a>
+
+        <p class="text-center mt-3">
+          Don't have an account?
+          <a href="./signup.html" class="text-primary">Sign up</a>
+        </p>
+      </form>
+    </div>
+  </div>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
