--- a/signup.html
+++ b/signup.html
@@ -1,33 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Sign Up - Focus Flow</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="style.css">
 </head>
-<body>
-     <P class="head"> Sign up in Focus Flow </P>
-    <div class="continer">
-  <form class="login-form">
-   <img class="imgLogo" src="./background.png" height="50px" width="70px">
-  <p> Name</p>
-   <input type="text" placeholder="lam">
-   <p> Age
-   </p>
-   <input type="number" placeholder="20">
-   <p> Email</p>
-   <input type="email" placeholder="lam@gmail.com">
-   <p> password
-   </p>
-   <input type="password" placeholder="**********">
-   <div class="button">
-    <br>
- <button><a href="home.html">Sign Up</a></button>
-   </div>
-     
-  </form> 
-  </div> 
-  
+<body class="d-flex align-items-center justify-content-center min-vh-100 bg-light">
+
+  <div class="container" style="max-width: 400px;">
+    <div class="card shadow-sm p-4">
+      <div class="text-center mb-4">
+        <img src="./background.png" alt="Logo" height="70">
+        <h3 class="mt-3">Sign Up in Focus Flow</h3>
+      </div>
+
+      <form>
+        <div class="mb-3">
+          <label for="name" class="form-label">Name</label>
+          <input type="text" id="name" class="form-control" placeholder="lam">
+        </div>
+
+        <div class="mb-3">
+          <label for="age" class="form-label">Age</label>
+          <input type="number" id="age" class="form-control" placeholder="20">
+        </div>
+
+        <div class="mb-3">
+          <label for="email" class="form-label">Email</label>
+          <input type="email" id="email" class="form-control" placeholder="lam@gmail.com">
+        </div>
+
+        <div class="mb-3">
+          <label for="password" class="form-label">Password</label>
+          <input type="password" id="password" class="form-control" placeholder="**********">
+        </div>
+
+        <a href="home.html" class="btn btn-dark w-100">Sign Up</a>
+      </form>
+
+    </div>
+  </div>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
