--- a/about.html
+++ b/about.html
@@ -24,7 +24,7 @@
         </button>
         <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
             <ul class="navbar-nav  mb-2 mb-lg-0 ">
-                <li class="nav-item"><a class="nav-link" href="#">Home</a></li>
+                <li class="nav-item"><a class="nav-link" href="./home.html">Home</a></li>
                 <li class="nav-item"><a class="nav-link" href="./about.html">About</a></li>
                 <li class="nav-item"><a class="nav-link" href="./contact.html">Contact Us</a></li>
                 <li class="nav-item"><a class="nav-link" href="./services.html">Services</a></li>
