--- a/services.html
+++ b/services.html
@@ -249,7 +249,7 @@
         </button>
         <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
             <ul class="navbar-nav  mb-2 mb-lg-0 ">
-                <li class="nav-item"><a class="nav-link" href="#">Home</a></li>
+                <li class="nav-item"><a class="nav-link" href="./home.html">Home</a></li>
                 <li class="nav-item"><a class="nav-link" href="./about.html">About</a></li>
                 <li class="nav-item"><a class="nav-link" href="./contact.html">Contact Us</a></li>
                 <li class="nav-item"><a class="nav-link" href="./services.html">Services</a></li>
@@ -328,6 +328,26 @@
         </div>
       </div>
     </section>
+    <!-- ================= Footer ================= -->
+<footer class="bg-dark text-white pt-5 pb-3 mt-5">
+    <div class="container text-center mb-4">
+        <h2>Ready to Maximize Your Productivity?</h2>
+        <p>Join thousands of users achieving ultimate focus today.</p>
+        <button class="btn btn-light">Start Your Free Trial</button>
+    </div>
+    <div class="container d-flex flex-column flex-md-row justify-content-between align-items-center">
+        <div>
+            <p class="mb-0">Lam © 2024. All Rights Reserved.</p>
+        </div>
+        <div>
+            <a href="URL_X" class="text-white me-3">X (Twitter)</a>
+            <a href="URL_LinkedIn" class="text-white me-3">LinkedIn</a>
+            <a href="mailto:info@lam.com" class="text-white me-3">Contact Us</a>
+            <a href="/privacy" class="text-white me-3">Privacy Policy</a>
+            <a href="/terms" class="text-white">Terms of Use</a>
+        </div>
+    </div>
+</footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
